--- a/posts/2021-12-22-network-size-and-structure/index.qmd
+++ b/posts/2021-12-22-network-size-and-structure/index.qmd
@@ -8,6 +8,7 @@ categories:
   - simulation
   - scale
 image: "apl.png"
+draft: true 
 ---
 
 *This post is also available on the [Social Ecological Networks Group](https://seng.netlify.app).*
