--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,10 @@
 ---
-title: "About"
+title: "Shane A. Scaggs"
 about:
   id: me
   template: jolla
-  image: img/mustache.png
+  image: img/Shane_Scaggs_Postdoc0846crop.jpg
 ---
 
-Hello. My name is Shane Scaggs. I am a Postdoctoral Scholar in the [Health and Environment Modeling Laboratory](https://healmod.osu.edu/). My research combines approaches from anthropology, ecology, and data science to understand the how humans, wildlife, and plants interact, and the complex patterns that emerge from these interactions. 
+I am a Postdoctoral Scholar in the [Health and Environment Modeling Laboratory](https://healmod.osu.edu/). My research combines approaches from anthropology, ecology, and data science to understand the how humans, wildlife, and plants interact, and the complex patterns that emerge from these interactions. 
 
