--- a/posts/2025-11-17-food-web-measurement/index.qmd
+++ b/posts/2025-11-17-food-web-measurement/index.qmd
@@ -5,6 +5,7 @@ categories: [community ecology, food webs, networks]
 format:
   html:
     toc: true
+bibliography: 2025-11-18.bib
 ---
 
 ### Introduction
@@ -12,7 +13,7 @@ format:
 Food webs are often represented as network graphs, where nodes represent species and links represent observed feeding interactions, or potential feeding interactions inferred from species traits. The [Web of Life](https://www.web-of-life.es/) database houses many such graphs, showcasing their interesting structural patterns and the tremendous efforts ecologists have gone to in order to collect these challenging data.  
 
 
-```{r, echo=F, message=F, warning=F}
+```{r, echo=F, message=F, warning=F, fig.cap="An example food web originally published by @bascompte2005interaction."}
 library(tidyverse)
 library(tidygraph)
 library(ggraph)
