--- a/posts/2025-11-20-food-web-measurement-2/index.qmd
+++ b/posts/2025-11-20-food-web-measurement-2/index.qmd
@@ -145,7 +145,7 @@ mass = exp(seq(log(0.01), log(1000), length.out = N))
 M = log10(mass)
 
 # Pairwise matrices 
-Bi = matrix(B, N, N)
+Bi = matrix(M, N, N)
 Bj = t(Bi)
 
 # Covariates 
